--- a/Tests/Fixtures/Etalon/users_collection.yml
+++ b/Tests/Fixtures/Etalon/users_collection.yml
@@ -1,104 +1,104 @@
 get_users:
   method:     GET
-  pattern:    /users
+  pattern:    /users.{_format}
   controller: ::getUsersAction
 
 get_user:
   method:     GET
-  pattern:    /users/{slug}
+  pattern:    /users/{slug}.{_format}
   controller: ::getUserAction
 
 post_users:
   method:     POST
-  pattern:    /users
+  pattern:    /users.{_format}
   controller: ::postUsersAction
 
 put_user:
   method:     PUT
-  pattern:    /users/{slug}
+  pattern:    /users/{slug}.{_format}
   controller: ::putUserAction
 
 lock_user:
   method:     PUT
-  pattern:    /users/{slug}/lock
+  pattern:    /users/{slug}/lock.{_format}
   controller: ::lockUserAction
 
 get_user_comments:
   method:     GET
-  pattern:    /users/{slug}/comments
+  pattern:    /users/{slug}/comments.{_format}
   controller: ::getUserCommentsAction
 
 get_user_comment:
   method:     GET
-  pattern:    /users/{slug}/comments/{id}
+  pattern:    /users/{slug}/comments/{id}.{_format}
   controller: ::getUserCommentAction
 
 delete_user_comment:
   method:     DELETE
-  pattern:    /users/{slug}/comments/{id}
+  pattern:    /users/{slug}/comments/{id}.{_format}
   controller: ::deleteUserCommentAction
 
 new_users:
   method:     GET
-  pattern:    /users/new
+  pattern:    /users/new.{_format}
   controller: ::newUsersAction
 
 new_user_comments:
   method:     GET
-  pattern:    /users/{slug}/comments/new
+  pattern:    /users/{slug}/comments/new.{_format}
   controller: ::newUserCommentsAction
 
 ban_user:
   method:     PUT
-  pattern:    /users/{slug}/ban
+  pattern:    /users/{slug}/ban.{_format}
   controller: ::banUserAction
 
 vote_user_comment:
   method:     PUT
-  pattern:    /users/{slug}/comments/{id}/vote
+  pattern:    /users/{slug}/comments/{id}/vote.{_format}
   controller: ::voteUserCommentAction
 
 get_user_topics:
   method:     GET
-  pattern:    /users/{slug}/topics
+  pattern:    /users/{slug}/topics.{_format}
   controller: ::getTopics
 
 new_user_topics:
   method:     GET
-  pattern:    /users/{slug}/topics/new
+  pattern:    /users/{slug}/topics/new.{_format}
   controller: ::newTopics
 
 get_user_topic:
   method:     GET
-  pattern:    /users/{slug}/topics/{title}
+  pattern:    /users/{slug}/topics/{title}.{_format}
   controller: ::getTopic
 
 put_user_topic:
   method:     PUT
-  pattern:    /users/{slug}/topics/{title}
+  pattern:    /users/{slug}/topics/{title}.{_format}
   controller: ::putTopic
 
 hide_user_topic:
   method:     PUT
-  pattern:    /users/{slug}/topics/{title}/hide
+  pattern:    /users/{slug}/topics/{title}/hide.{_format}
   controller: ::hideTopic
 
 get_user_topic_comments:
   method:     GET
-  pattern:    /users/{slug}/topics/{title}/comments
+  pattern:    /users/{slug}/topics/{title}/comments.{_format}
   controller: ::getComments
 
 new_user_topic_comments:
   method:     GET
-  pattern:    /users/{slug}/topics/{title}/comments/new
+  pattern:    /users/{slug}/topics/{title}/comments/new.{_format}
   controller: ::newComments
 
 put_user_topic_comment:
   method:     PUT
-  pattern:    /users/{slug}/topics/{title}/comments/{id}
+  pattern:    /users/{slug}/topics/{title}/comments/{id}.{_format}
   controller: ::putComment
 
 ban_user_topic_comment:
   method:     PUT
-  pattern:    /users/{slug}/topics/{title}/comments/{id}/ban
+  pattern:    /users/{slug}/topics/{title}/comments/{id}/ban.{_format}
   controller: ::banComment
