--- a/Tests/Fixtures/Etalon/users_controller.yml
+++ b/Tests/Fixtures/Etalon/users_controller.yml
@@ -1,64 +1,64 @@
 get_users:
   method:     GET
-  pattern:    /users
+  pattern:    /users.{_format}
   controller: ::getUsersAction
 
 get_user:
   method:     GET
-  pattern:    /users/{slug}
+  pattern:    /users/{slug}.{_format}
   controller: ::getUserAction
 
 post_users:
   method:     POST
-  pattern:    /users
+  pattern:    /users.{_format}
   controller: ::postUsersAction
 
 put_user:
   method:     PUT
-  pattern:    /users/{slug}
+  pattern:    /users/{slug}.{_format}
   controller: ::putUserAction
 
 lock_user:
   method:     PUT
-  pattern:    /users/{slug}/lock
+  pattern:    /users/{slug}/lock.{_format}
   controller: ::lockUserAction
 
 get_user_comments:
   method:     GET
-  pattern:    /users/{slug}/comments
+  pattern:    /users/{slug}/comments.{_format}
   controller: ::getUserCommentsAction
 
 get_user_comment:
   method:     GET
-  pattern:    /users/{slug}/comments/{id}
+  pattern:    /users/{slug}/comments/{id}.{_format}
   controller: ::getUserCommentAction
 
 delete_user_comment:
   method:     DELETE
-  pattern:    /users/{slug}/comments/{id}
+  pattern:    /users/{slug}/comments/{id}.{_format}
   controller: ::deleteUserCommentAction
 
 new_users:
   method:     GET
-  pattern:    /users/new
+  pattern:    /users/new.{_format}
   controller: ::newUsersAction
 
 new_user_comments:
   method:     GET
-  pattern:    /users/{slug}/comments/new
+  pattern:    /users/{slug}/comments/new.{_format}
   controller: ::newUserCommentsAction
 
 ban_user:
   method:     PUT
-  pattern:    /users/{slug}/ban
+  pattern:    /users/{slug}/ban.{_format}
   controller: ::banUserAction
 
 vote_user_comment:
   method:     PUT
-  pattern:    /users/{slug}/comments/{id}/vote
+  pattern:    /users/{slug}/comments/{id}/vote.{_format}
   controller: ::voteUserCommentAction
 
 check_username_users:
   method:     GET
-  pattern:    /users/check_username
+  pattern:    /users/check_username.{_format}
   controller: ::check_usernameUsersAction
