Routing for HTTP PATCH method + updated tests

--- a/Tests/Fixtures/Etalon/annotated_users_controller.yml
+++ b/Tests/Fixtures/Etalon/annotated_users_controller.yml
@@ -7,7 +7,17 @@ get_user:
   pattern:      /users/{slug}.{_format}
   controller:   ::getUserAction
   requirements: {_method: GET, slug: '[a-z]+'}
+  
+patch_users:
+  pattern:      /users.{_format}
+  controller:   ::patchUsersAction
+  requirements: {_method: PATCH}
 
+patch_user:
+  pattern:      /users/{slug}.{_format}
+  controller:   ::patchUserAction
+  requirements: {_method: PATCH, slug: '[a-z]+'}
+  
 get_user_comment:
   pattern:      /users/{slug}/comments/{id}.{_format}
   controller:   ::getUserCommentAction
