--- a/Tests/Fixtures/Etalon/users_controller.yml
+++ b/Tests/Fixtures/Etalon/users_controller.yml
@@ -29,7 +29,7 @@ patch_user:
   controller: ::patchUserAction
 
 lock_user:
-  method:     PUT
+  method:     POST
   pattern:    /users/{slug}/lock.{_format}
   controller: ::lockUserAction
 
@@ -59,12 +59,12 @@ new_user_comments:
   controller: ::newUserCommentsAction
 
 ban_user:
-  method:     PUT
+  method:     POST
   pattern:    /users/{slug}/ban.{_format}
   controller: ::banUserAction
 
 vote_user_comment:
-  method:     PUT
+  method:     POST
   pattern:    /users/{slug}/comments/{id}/vote.{_format}
   controller: ::voteUserCommentAction
 
