--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,24 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <phpunit bootstrap="./Tests/bootstrap.php" color="true">
-  <php>
-    <server name="SYMFONY" value="../../../symfony/src" />
-    <server name="DOCTRINE" value="../../../doctrine-common/lib" />
-  </php>
 
-  <testsuites>
-    <testsuite name="FOSRestBundle">
-      <directory suffix="Test.php">./Tests</directory>
-    </testsuite>
-  </testsuites>
+    <testsuites>
+        <testsuite name="FOSRestBundle test suite">
+            <directory suffix="Test.php">./Tests</directory>
+        </testsuite>
+    </testsuites>
 
-  <filter>
-    <whitelist>
-      <directory>./</directory>
-      <exclude>
-        <directory>./Resources</directory>
-        <directory>./Tests</directory>
-      </exclude>
-    </whitelist>
-  </filter>
+    <filter>
+        <whitelist>
+            <directory>./</directory>
+            <exclude>
+                <directory>./Resources</directory>
+                <directory>./Tests</directory>
+            </exclude>
+        </whitelist>
+    </filter>
 </phpunit>
