--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: php
 php: 5.3.8
+env:
+  - SYMFONY_VERSION=v2.0.5
+  - SYMFONY_VERSION=origin/master
 before_script: php vendor/vendors.php
 script: phpunit
