notify friendsofsymfony-dev@googlegroups.com

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,6 @@ env:
   - SYMFONY_VERSION=origin/master
 before_script: php vendor/vendors.php
 script: phpunit
+notifications:
+  email:
+    - friendsofsymfony-dev@googlegroups.com
