--- a/Tests/autoload.php.dist
+++ b/Tests/autoload.php.dist
@@ -24,3 +24,12 @@ spl_autoload_register(function($class) {
         return true;
     }
 });
+
+use Doctrine\Common\Annotations\AnnotationRegistry;
+AnnotationRegistry::registerLoader(function($class) {
+    if (strpos($class, 'FOS\RestBundle\Controller\Annotations\\') === 0) {
+        $path = __DIR__.'/../'.str_replace('\\', '/', substr($class, strlen('FOS\RestBundle\\')))   .'.php';
+        require_once $path;
+    }
+    return class_exists($class, false);
+});
