Optional parameters should not end up in the routing for the resource

--- a/Tests/Fixtures/Etalon/users_controller.yml
+++ b/Tests/Fixtures/Etalon/users_controller.yml
@@ -78,4 +78,7 @@ hide_user_comment:
   pattern:    /users/{userId}/comments/{commentId}/hide.{_format}
   controller: ::hideUserCommentAction
 
- 
+get_user_threads:
+  method:     GET
+  pattern:    /users/{slug}/threads.{_format}
+  controller: ::getUserThreadsAction
