--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "jms/serializer-bundle": "1.*"
+        "symfony/symfony": ">=2.0",
+        "jms/serializer-bundle": "*"
     },
     "suggest": {
         "doctrine/common": "master-dev",
