--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<phpunit bootstrap="./Tests/bootstrap.php" colors="true">
+<phpunit bootstrap="./vendor/.composer/autoload.php" colors="true">
 
     <testsuites>
         <testsuite name="FOSRestBundle test suite">
