moved suggestions to require block as Composer doesn't support first yet

--- a/composer.json
+++ b/composer.json
@@ -20,14 +20,11 @@
         }
     ],
     "require": {
-        "php": ">=5.3.2",
-        "symfony/symfony": ">=2.0",
-        "jms/serializer-bundle": "*"
-    },
-    "suggest": {
-        "doctrine/common": "master-dev",
-        "symfony/framework-bundle": "2.*",
-        "sensio/framework-extra-bundle": "master-dev"
+        "php":                            ">=5.3.2",
+        "symfony/symfony":                ">=2.1.0-dev",
+        "doctrine/common":                ">=2.1.0",
+        "sensio/framework-extra-bundle":  "*",
+        "jms/serializer-bundle":          "*"
     },
     "autoload": {
         "psr-0": { "FOS\\RestBundle": "" }
