fixed travis tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,9 @@ php:
   - 5.3
   - 5.4
 
-env:
-  - SYMFONY_VERSION=origin/master
-
-before_script: php vendor/vendors.php
+before_script:
+  - wget -nc http://getcomposer.org/composer.phar
+  - php composer.phar install
 
 script: phpunit --coverage-text
 
