--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     ],
     "require": {
         "php":                            ">=5.3.2",
-        "symfony/symfony":                ">=2.1.0-dev",
+        "symfony/symfony":                "<2.1.0-dev",
         "doctrine/common":                ">=2.1.0",
         "sensio/framework-extra-bundle":  "*",
         "jms/serializer-bundle":          "*"
