--- a/composer.json
+++ b/composer.json
@@ -23,10 +23,8 @@
         "php":                            ">=5.3.2",
         "symfony/symfony":                "<2.1.0-dev",
         "doctrine/common":                ">=2.1.0",
-        "sensio/framework-extra-bundle":  "*"
-    },
-    "suggest": {
-        "jms/serializer-bundle":  "*"
+        "sensio/framework-extra-bundle":  "*",
+        "jms/serializer-bundle":          "*"
     },
     "autoload": {
         "psr-0": { "FOS\\RestBundle": "" }
