--- a/Tests/Fixtures/Etalon/users_controller.yml
+++ b/Tests/Fixtures/Etalon/users_controller.yml
@@ -78,4 +78,7 @@ hide_user_comment:
   pattern:    /users/{userId}/comments/{commentId}/hide.{_format}
   controller: ::hideUserCommentAction
 
- 
+get_foo_bars:
+  method:     GET
+  pattern:    /foos/{foo}/bars.{_format}
+  controller: ::getFooBarsAction
