--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
 
     "require": {
         "php":                            ">=5.3.2",
-        "symfony/symfony":                "2.1.*",
+        "symfony/symfony":                ">=2.1.0-dev",
         "sensio/framework-extra-bundle":  "*",
         "jms/serializer-bundle":          "*"
     },
