--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     "require": {
         "php":                            ">=5.3.2",
         "friendsofsymfony/rest":          "*",
-        "symfony/symfony":                ">=2.1",
+        "symfony/symfony":                ">=2.0,<2.2",
         "sensio/framework-extra-bundle":  "*",
         "jms/serializer-bundle":          "*"
     },
