--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,8 @@
     "require": {
         "php":                            ">=5.3.2",
         "friendsofsymfony/rest":          "0.7.*",
-        "symfony/symfony":                ">=2.0,<2.2",
-        "sensio/framework-extra-bundle":  ">=2.0,<2.2",
+        "symfony/symfony":                ">=2.0,<2.2-dev",
+        "sensio/framework-extra-bundle":  ">=2.0,<2.2-dev",
         "jms/serializer-bundle":          "0.9.*"
     },
 
