set minimum stability

--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "keywords": ["rest"],
     "homepage": "http://friendsofsymfony.github.com",
     "license": "MIT",
+    "minimum-stability": "dev",
     "authors": [
         {
             "name": "Lukas Kahwe Smith",
