--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ php:
 
 before_script:
   - curl -s http://getcomposer.org/installer | php --
-  - php composer.phar install
+  - php composer.phar --dev install
 
 script: phpunit --coverage-text
 
