--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,12 @@ php:
   - 5.3
   - 5.4
 
+env:
+  - SYMFONY_VERSION=2.0.*
+  - SYMFONY_VERSION=dev-master
+
 before_script:
-  - curl -s http://getcomposer.org/installer | php --
-  - php composer.phar --dev install
+  - composer require --dev symfony/framework-bundle:${SYMFONY_VERSION}
 
 script: phpunit --coverage-text
 
