thx composer for having me do your job of solving dependencies

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ env:
   - SYMFONY_VERSION=dev-master
 
 before_script:
-  - composer require --dev symfony/framework-bundle:${SYMFONY_VERSION}
+  - composer require symfony/framework-bundle:${SYMFONY_VERSION}
+  - composer install --dev
 
 script: phpunit --coverage-text
 
