--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
 
     "require": {
         "php":                            ">=5.3.2",
-        "friendsofsymfony/rest":          "0.7.*",
+        "friendsofsymfony/rest":          ">=0.7.0,<0.9.0-dev",
         "symfony/framework-bundle":       ">=2.0,<2.3-dev",
         "sensio/framework-extra-bundle":  ">=2.0,<2.3-dev",
         "jms/serializer-bundle":          "0.9.*"
