--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "php":                            ">=5.3.2",
         "friendsofsymfony/rest":          ">=0.7.0,<0.9.0-dev",
         "symfony/framework-bundle":       ">=2.0,<2.3-dev",
-        "jms/serializer-bundle":          ">=0.9,<=1.0.x-dev"
+        "jms/serializer-bundle":          ">=0.9,<=0.10"
     },
 
     "require-dev": {
