--- a/composer.json
+++ b/composer.json
@@ -24,19 +24,21 @@
     "require": {
         "php":                            ">=5.3.2",
         "friendsofsymfony/rest":          ">=0.7.0,<0.9.0-dev",
-        "symfony/framework-bundle":       ">=2.0,<2.3-dev",
-        "jms/serializer-bundle":          ">=0.9,<=0.10"
+        "symfony/framework-bundle":       ">=2.0,<2.3-dev"
     },
 
     "require-dev": {
         "sensio/framework-extra-bundle":  ">=2.0,<2.3-dev",
         "symfony/form": ">=2.0,<2.3-dev",
         "symfony/yaml": ">=2.0,<2.3-dev",
-        "symfony/security": ">=2.0,<2.3-dev"
+        "symfony/security": ">=2.0,<2.3-dev",
+        "jms/serializer-bundle": ">=0.9,<=0.10"
     },
 
     "suggest": {
-        "sensio/framework-extra-bundle":  "Add support for route annotations"
+        "sensio/framework-extra-bundle":  "Add support for route annotations",
+        "jms/serializer-bundle":          "Add support for advanced serialization capabilities, recommended, requires >=0.9,<=0.10",
+        "symfony/serializer":             "Add support for basic serialization capabilities, requires >=2.0,<2.3-dev"
     },
 
     "autoload": {
