--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,10 @@
         "symfony/security": ">=2.1,<2.3-dev",
         "jms/serializer-bundle": "1.0.*"
     },
+    
+    "conflict": {
+        "jms/serializer-bundle": "<1.0-dev"
+    },
 
     "suggest": {
         "sensio/framework-extra-bundle":  "Add support for route annotations and the view response listener",
