--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,9 @@ php:
   - 5.4
 
 env:
+#  - SYMFONY_VERSION=2.0.*
   - SYMFONY_VERSION=2.1.*
-  - SYMFONY_VERSION=dev-master
+#  - SYMFONY_VERSION=dev-master
 
 before_script:
   - composer require symfony/framework-bundle:${SYMFONY_VERSION}
