Update composer.json to use jms/serializer-bundler 0.12

--- a/composer.json
+++ b/composer.json
@@ -32,11 +32,11 @@
         "symfony/form": ">=2.1,<2.4-dev",
         "symfony/yaml": ">=2.1,<2.4-dev",
         "symfony/security": ">=2.1,<2.4-dev",
-        "jms/serializer-bundle": "0.11.*"
+        "jms/serializer-bundle": "0.12.*"
     },
-    
+
     "conflict": {
-        "jms/serializer-bundle": "<0.11-dev"
+        "jms/serializer-bundle": "<=0.11-dev"
     },
 
     "suggest": {
