--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
     "require": {
         "php":                            ">=5.3.2",
         "friendsofsymfony/rest":          ">=0.7.0,<0.9.0-dev",
-        "symfony/framework-bundle":       ">=2.1,<2.3-dev"
+        "symfony/framework-bundle":       ">=2.1,<2.3-dev",
+        "doctrine/inflector": "1.0.x"
     },
 
     "require-dev": {
