disable 2.3 ak dev-master because of SensioFrameworkExtraBundle

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
 #  - SYMFONY_VERSION=2.0.*
   - SYMFONY_VERSION=2.1.*
   - SYMFONY_VERSION=2.2.*
-  - SYMFONY_VERSION=dev-master
+#  - SYMFONY_VERSION=dev-master
 
 before_script:
   - composer require symfony/framework-bundle:${SYMFONY_VERSION} --no-update
