--- a/composer.json
+++ b/composer.json
@@ -24,15 +24,15 @@
     "require": {
         "php":                            ">=5.3.2",
         "friendsofsymfony/rest":          ">=0.7.0,<0.9.0-dev",
-        "symfony/framework-bundle":       ">=2.1,<2.3-dev",
+        "symfony/framework-bundle":       "~2.1",
         "doctrine/inflector":             "1.0.*"
     },
 
     "require-dev": {
-        "sensio/framework-extra-bundle":  ">=2.1,<2.4-dev",
-        "symfony/form": ">=2.1,<2.4-dev",
-        "symfony/yaml": ">=2.1,<2.4-dev",
-        "symfony/security": ">=2.1,<2.4-dev",
+        "sensio/framework-extra-bundle":  "~2.1",
+        "symfony/form": "~2.1",
+        "symfony/yaml": "~2.1",
+        "symfony/security": "~2.1",
         "jms/serializer-bundle": "0.12.*"
     },
 
