lets allow 1.0.* for now
as the lib is still a bit fresh rather not depend on ~1.0

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "friendsofsymfony/rest":          ">=0.7.0,<0.9.0-dev",
         "symfony/framework-bundle":       "~2.1",
         "doctrine/inflector":             "1.0.*",
-        "willdurand/negotiation":         "@stable"
+        "willdurand/negotiation":         "1.0.*"
     },
 
     "require-dev": {
