--- a/composer.json
+++ b/composer.json
@@ -26,15 +26,16 @@
         "friendsofsymfony/rest":          ">=0.7.0,<0.9.0-dev",
         "symfony/framework-bundle":       "~2.1",
         "doctrine/inflector":             "1.0.*",
-        "willdurand/negotiation":         "1.0.*"
-    },
-
-    "require-dev": {
+        "willdurand/negotiation":         "1.0.*",
         "sensio/framework-extra-bundle":  "~2.1",
         "symfony/form": "~2.1",
         "symfony/yaml": "~2.1",
         "symfony/security": "~2.1",
         "jms/serializer-bundle": "0.12.*"
+    },
+
+    "require-dev": {
+
     },
 
     "suggest": {
