--- a/Tests/Fixtures/Etalon/prefixed_users_collection.yml
+++ b/Tests/Fixtures/Etalon/prefixed_users_collection.yml
@@ -65,7 +65,7 @@ ban_user:
 
 post_user_comment_vote:
   method:     POST
-  pattern:    /resources/all/users/{slug}/comments/{id}/vote.{_format}
+  pattern:    /resources/all/users/{slug}/comments/{id}/votes.{_format}
   controller: ::postUserCommentVoteAction
 
 get_user_topics:
