--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
     "suggest": {
         "sensio/framework-extra-bundle":  "Add support for route annotations and the view response listener",
         "jms/serializer-bundle":          "Add support for advanced serialization capabilities, recommended, requires 0.12.*",
-        "symfony/serializer":             "Add support for basic serialization capabilities, requires >=2.0,<2.3-dev"
+        "symfony/serializer":             "Add support for basic serialization capabilities and xml decoding, requires ~2.1"
     },
 
     "conflict": {
