--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "php":                            ">=5.3.2",
         "symfony/framework-bundle":       "~2.1",
         "doctrine/inflector":             "1.0.*",
-        "willdurand/negotiation":         "1.0.*"
+        "willdurand/negotiation":         "~1.1.0"
     },
 
     "require-dev": {
@@ -57,7 +57,7 @@
 
     "extra": {
         "branch-alias": {
-            "dev-master": "1.1-dev"
+            "dev-master": "1.2-dev"
         }
     }
 }
