--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "php":                            ">=5.3.2",
         "symfony/framework-bundle":       "~2.2",
         "doctrine/inflector":             "1.0.*",
-        "willdurand/negotiation":         "~1.2.0"
+        "willdurand/negotiation":         "~1.2.0",
+        "willdurand/jsonp-callback-validator": "~1.0.0"
     },
 
     "require-dev": {
