--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
 
     "require": {
         "php":                            ">=5.3.2",
+        "psr/log":                        "~1.0",
         "symfony/framework-bundle":       "~2.2",
         "doctrine/inflector":             "1.0.*",
         "willdurand/negotiation":         "~1.2.0",
