add initial config test

--- a/Tests/Fixtures/Etalon/annotated_users_controller.yml
+++ b/Tests/Fixtures/Etalon/annotated_users_controller.yml
@@ -57,3 +57,9 @@ bhead_user:
   pattern:      /users/{slug}/bhead.{_format}
   controller:   ::bheadUserAction
   requirements: {_method: HEAD}
+
+conditional_user:
+  pattern:      /users/conditional.{_format}
+  controller:   ::conditionalUserAction
+  requirements: {_method: GET}
+  condition: route
