--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ php:
 env:
   - SYMFONY_VERSION=2.2.*
   - SYMFONY_VERSION=2.3.*
+  - SYMFONY_VERSION='2.3.* symfony/expression-language:2.4.*  symfony/routing:2.4.*'
   - SYMFONY_VERSION=2.4.*
   - SYMFONY_VERSION='dev-master symfony/event-dispatcher:~2.5@dev'
 
