--- a/Tests/Fixtures/Etalon/annotated_users_controller.yml
+++ b/Tests/Fixtures/Etalon/annotated_users_controller.yml
@@ -57,3 +57,21 @@ bhead_user:
   pattern:      /users/{slug}/bhead.{_format}
   controller:   ::bheadUserAction
   requirements: {_method: HEAD}
+
+
+multipleget_users_a_get_method:
+  pattern:      /users2.{_format}
+  controller:   ::multiplegetUsersAction
+  requirements: {_method: GET}
+multipleget_users_an_other_get_method:
+  pattern:      /users3.{_format}
+  controller:   ::multiplegetUsersAction
+  requirements: {_method: GET}
+multipleget_users_a_post_method:
+  pattern:      /users4.{_format}
+  controller:   ::multiplegetUsersAction
+  requirements: {_method: POST}
+multipleget_users_a_link_method:
+  pattern:      /users1.{_format}
+  controller:   ::multiplegetUsersAction
+  requirements: {_method: LINK}
