--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "symfony/framework-bundle":       "~2.2",
         "doctrine/inflector":             "1.0.*",
         "willdurand/negotiation":         "~1.2",
-        "willdurand/jsonp-callback-validator": "~1.0"
+        "willdurand/jsonp-callback-validator": "~1.0",
+        "jms/serializer-bundle":          "0.12.*"
     },
 
     "require-dev": {
@@ -35,8 +36,7 @@
         "symfony/validator":              "~2.2",
         "symfony/serializer":             "~2.2",
         "symfony/yaml":                   "~2.2",
-        "symfony/security":               "~2.2",
-        "jms/serializer-bundle":          "0.12.*"
+        "symfony/security":               "~2.2"
     },
 
     "suggest": {
