--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,15 @@ php:
   - 5.3
   - 5.4
   - 5.5
-
+  - hhvm
+ 
 env:
   - SYMFONY_VERSION=2.5.*
 
 matrix:
   allow_failures:
     - env: SYMFONY_VERSION=dev-master
+    - php: hhvm
   include:
     - php: 5.5
       env: SYMFONY_VERSION='2.3.* symfony/expression-language:2.4.* symfony/routing:2.4.*'
