--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,10 @@
     ],
 
     "require": {
-        "php":                            ">=5.3.2",
+        "php":                            ">=5.3.3",
         "psr/log":                        "~1.0",
         "symfony/framework-bundle":       "~2.2",
-        "doctrine/inflector":             "1.0.*",
+        "doctrine/inflector":             "~1.0",
         "willdurand/negotiation":         "~1.2",
         "willdurand/jsonp-callback-validator": "~1.0"
     },
@@ -59,7 +59,7 @@
 
     "extra": {
         "branch-alias": {
-            "dev-master": "1.4-dev"
+            "dev-master": "1.5-dev"
         }
     }
 }
