Improved the Travis configuration
- Build only the master branch and the maintenance branches for releases, not feature branches (these are already tested through their PRs)
- Fixed the testing against several Symfony versions, by testing against the fullstack framework in such case rather than the specific version of FrameworkBundle but still the latest version of components. The normal builds rely on the unmodified constraints, which also ensure they work by default.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,25 +5,26 @@ php:
   - 5.4
   - 5.5
   - hhvm
- 
-env:
-  - SYMFONY_VERSION=2.5.*
+  
+branches:
+  only:
+    - master
+    - /^\d+\.\d+$/
 
 matrix:
   allow_failures:
-    - env: SYMFONY_VERSION=dev-master
     - php: hhvm
   include:
     - php: 5.5
-      env: SYMFONY_VERSION='2.3.* symfony/expression-language:2.4.* symfony/routing:2.4.*'
+      env: SYMFONY_VERSION='2.3.* symfony/expression-language:2.4.*'
     - php: 5.5
       env: SYMFONY_VERSION=2.4.*
     - php: 5.5
-      env: SYMFONY_VERSION='dev-master symfony/debug:~2.6@dev symfony/http-kernel:~2.6@dev'
+      env: SYMFONY_VERSION='dev-master'
 
 before_script:
   - composer self-update
-  - composer require symfony/framework-bundle:${SYMFONY_VERSION} --no-update
+  - sh -c 'if [ "$SYMFONY_VERSION" != "" ]; then composer require --dev --no-update symfony/symfony=$SYMFONY_VERSION; fi;'
   - composer update --prefer-source
 
 script: phpunit --coverage-text
