--- a/Tests/Fixtures/Etalon/annotated_users_controller.yml
+++ b/Tests/Fixtures/Etalon/annotated_users_controller.yml
@@ -76,11 +76,11 @@ multipleget_users_a_link_method:
   controller:   ::multiplegetUsersAction
   requirements: {_method: LINK}
 
-multiplepost_users_foo:
+post_users_foo:
   pattern:      /users1/{foo}.{_format}
   controller:   ::multiplepostUsersAction
   requirements: {_method: POST}
-multiplepost_users_bar:
+post_users_bar:
   pattern:      /users2/{foo}.{_format}
   controller:   ::multiplepostUsersAction
   requirements: {_method: POST}
