disable HHVM again

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ branches:
     - /^\d+\.\d+$/
 
 matrix:
+  allow_failures:
+    - php: hhvm
   include:
     - php: 5.5
       env: SYMFONY_VERSION='2.3.* symfony/expression-language:2.4.*'
