set xml whitelist for php to file

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,6 @@ branches:
     - /^\d+\.\d+$/
 
 matrix:
-  allow_failures:
-    - php: hhvm
   include:
     - php: 5.5
       env: SYMFONY_VERSION='2.3.* symfony/expression-language:2.4.*'
@@ -21,6 +19,8 @@ matrix:
       env: SYMFONY_VERSION=2.4.*
     - php: 5.5
       env: SYMFONY_VERSION='dev-master'
+
+before_install: echo -e '\nhhvm.libxml.ext_entity_whitelist = "file"' | sudo tee -a /etc/hhvm/php.ini
 
 before_script:
   - composer self-update
